--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
 	<title>Index</title>
 </head>
 <body>
-	<h1>My name is Le Nguyen Thanh Tan</h1>
+	<h1>This is the index page</h1>
 </body>
 </html>
